feat(rag): integrate production retrieval and audit trace